--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
     "buildapk": "eas build -p android --profile preview"
   },
   "dependencies": {
+    "@expo/webpack-config": "^18.0.1",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
+    "expo-updates": "~0.16.4",
     "react": "18.2.0",
-    "react-native": "0.71.8",
     "react-dom": "18.2.0",
-    "react-native-web": "~0.18.10",
-    "@expo/webpack-config": "^18.0.1",
-    "expo-updates": "~0.16.4"
+    "react-native": "0.71.8",
+    "react-native-paper": "^5.9.1",
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
