--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
     "react-native-paper": "^5.9.1",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "react-native-maps": "1.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
