--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-native": "0.71.8",
     "react-native-paper": "^5.9.1",
     "react-native-web": "~0.18.10",
-    "react-native-maps": "1.3.2"
+    "react-native-maps": "1.3.2",
+    "expo-location": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
