--- a/package.json
+++ b/package.json
@@ -11,19 +11,24 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-async-storage/async-storage": "^1.19.1",
     "@react-native-picker/picker": "^2.4.10",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@supabase/supabase-js": "^2.26.0",
     "expo": "~48.0.18",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-elements": "^3.4.3",
     "react-native-maps": "1.3.2",
     "react-native-paper": "^5.9.1",
+    "expo-location": "~15.1.1",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.18.10",
-    "expo-location": "~15.1.1"
+    "expo-secure-store": "~12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
